[project]
name = "ttk7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emd-signal>=1.6.4",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "ssqueezepy>=0.6.6",
    "tftb>=0.2.0",
]
